# trading-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKEND_COMPLETE_SUMMARY.md  CAR-ANALYSIS-IMPLEMENTATION-COMPLETE.md  DRIFT-MONITORING-COMPLETE.md  Dockerfile.hardened  FILLS-EXCHANGE-FEE-MODELING-COMPLETE.md  IMPLEMENTATION_COMPLETE.md  LATENCY-MONITORING-COMPLETE.md  MLFLOW-IMPLEMENTATION-COMPLETE.md  MLOPS-DEPLOYMENT-COMPLETE.md  OOS-VALIDATION-IMPLEMENTATION-COMPLETE.md  PHASE3_DOD_COMPLIANCE.md  PHASE4_IMPLEMENTATION.md  PHASE4_WEEKS17+_COMPLETION.md  README.md  SETUP.md  TESTING-INSTRUCTIONS.md  VOLATILITY-THRESHOLD-CALIBRATION-COMPLETE.md  additional_edge_cases.md  check-status.py  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  manual-testing-checklist.md  requirements.txt  setup_trading_platform.sh  start-services.bat  status-report.json  test-all-services.py  test-results.json  test_unusual_activity.py
altdata/: monitoring.py  (+4 more)
market-data-test-service/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  quick_ws_check.py  requirements-dev.txt  requirements.txt
market-data-test-service/.github/workflows/: ci.yml
market-data-test-service/mini_server/: main.py
market-data-test-service/schemas/: health.json  ohlcv.json  orderbook.json  quote.json  search_result.json
market-data-test-service/scripts/: run-schemathesis.sh
market-data-test-service/tests/: conftest.py
services/news-data-service/: Dockerfile  docker-compose.yml  pyproject.toml  watchlist.txt
(+739 files in other folders)
