[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-test-service"
version = "0.1.0"
description = "Black-box QA harness for the Market Data API."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "QA Automation Team" }
]
license = { text = "Proprietary" }

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
branch = true
omit = ["tests/perf/*"]
