[tool.poetry]
name = "news-data-service"
version = "0.1.0"
description = "Slim, PIT-safe news ingest service"
authors = ["Rony Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
SQLAlchemy = "^2.0.32"
asyncpg = "^0.29.0"
redis = "^5.0.7"
pydantic = "^2.9.2"
pydantic-settings = "^2.4.0"
httpx = "^0.27.2"
python-dateutil = "^2.9.0.post0"
structlog = "^24.1.0"
prometheus-client = "^0.20.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.8"

[tool.ruff]
line-length = 100
